feat: add heading page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Struttura Discord</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="">
@@ -12,52 +15,66 @@
 
     <header class="bghead">
         <div class="container">
-            <div class="logo mrgelement">logo</div>
+            <div class="logo mrgelement">
+                <img src="./img/logo.svg" alt="" class="dslogo">
+            </div>
             <nav class="nav-content main-nav">
                 <ul>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
-                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perchè Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
                 </ul>
             </nav>
-            <div class="login mrgelement">login</div>
+            <div class="login mrgelement">
+                <button class="button-nav">Accedi</button>
+            </div>
         </div>
     </header>
     
     <section class="downhead">
-        <div class="pinkbox"></div>
+        <div class="pinkbox">
+            <h1 class="heading-low">Il tuo posto per parlare</h1>
+            <p class="low-headingparagraph">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica
+                mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme,
+                Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <div class="buttonhead">
+                    <button class="button buttoncolor1 sizetext-button">Scarica per Mac</button>
+                    <button class="button buttoncolor2 sizetext-button">Apri Discord sul tuo Browser</button>
+                </div>
+        </div>
     </section>
 
     <!-- /header -->
 
     <!-- MAIN | ALL SECTION -->
+    <main>
+        <section>
+            <div class="container2">
+                <div class="col-60 container2"></div>
+                <div class="col-40 container2"></div>
+            </div>
+        </section>
 
-    <section>
-        <div class="container2">
-            <div class="col-60 container2"></div>
-            <div class="col-40 container2"></div>
-        </div>
-    </section>
+        <section class="bgc3">
+            <div class="container3">
+                <div class="col-2 container2"></div>
+                <div class="col-3 container2"></div>
+            </div>
+        </section>
 
-    <section class="bgc3">
-        <div class="container3">
-            <div class="col-2 container2"></div>
-            <div class="col-3 container2"></div>
-        </div>
-    </section>
+        <section>
+            <div class="container2">
+                <div class="col-60 container2"></div>
+                <div class="col-40 container2"></div>
+            </div>
+        </section>
 
-    <section>
-        <div class="container2">
-            <div class="col-60 container2"></div>
-            <div class="col-40 container2"></div>
-        </div>
-    </section>
-
-    <section class="lowwalpaperbox">
-        <div class="greenbox"></div>
-    </section>
+        <section class="lowwalpaperbox">
+            <div class="greenbox"></div>
+        </section>
+    </main>
 
     <!-- /MAIN | ALL SECTION -->
 
